--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
+requires = ["hatchling", "uv-dynamic-versioning"]
 build-backend = "hatchling.build"
 
 [tool.hatch.version]
@@ -8,7 +8,7 @@ source = "uv-dynamic-versioning"
 [tool.uv-dynamic-versioning]
 vcs = "git"
 style = "pep440"
-bump = true
+pattern = "default-unprefixed"
 
 [project]
 name = "otterapi"
@@ -64,10 +64,10 @@ test = [
 ]
 
 [tool.hatch.build.targets.wheel]
-only-include = ["otterapi/", "/README.md"]
+only-include = ["otterapi/*", "/README.md"]
 
 [tool.hatch.build.targets.sdist]
-include = ["/README.md", "/Makefile", "/tests"]
+include = ["otterapi/*", "/README.md"]
 
 [tool.ruff]
 exclude = [".venv", "venv", "build", "dist", "__pycache__", ".eggs"]
