--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,7 +2,7 @@ name: QA Check
 on:
   push:
     paths:
-      - ../../otterapi/**/*
+      - otterapi/**/*
       - pyproject.toml
   workflow_dispatch:
 
@@ -12,12 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.13
+        uses: astral-sh/setup-uv@v7
       - name: Install dependencies
         run: |
-          pip install uv
           uv pip install . --group dev --system
       - name: Run ruff linter
         continue-on-error: true
@@ -44,7 +41,6 @@ jobs:
         os: [ubuntu-latest]
         python-version: ["3.13"]
         include:
-          # we'll test the python support on ubuntu
           - os: ubuntu-latest
             python-version: "3.14"
           - os: ubuntu-latest
@@ -58,10 +54,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: astral-sh/setup-uv@v7
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install uv
           uv build .
