--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,12 @@ classifiers = [
 ]
 
 dependencies = [
-    "httpx>=0.28.1",
-    "openapi-pydantic>=0.5.1",
-    "pydantic-settings>=2.11.0",
-    "pydantic[email]>=2.12.3",
-    "pyyaml>=6.0.3",
-    "typer>=0.20.0",
-    "universal-pathlib>=0.3.4",
+    "httpx~=0.28.1",
+    "pydantic-settings~=2.11.0",
+    "pydantic[email]~=2.12.3",
+    "pyyaml~=6.0.3",
+    "typer~=0.20.0",
+    "universal-pathlib~=0.3.4",
 ]
 
 [project.urls]
@@ -154,4 +153,3 @@ exclude_lines = [
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
 ]
-
