--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,12 @@ classifiers = [
 ]
 
 dependencies = [
-    "httpx>=0.28.1",
-    "openapi-pydantic>=0.5.1",
-    "pydantic-settings>=2.11.0",
-    "pyyaml>=6.0.3",
-    "typer>=0.20.0",
-    "universal-pathlib>=0.3.4",
+    "httpx~=0.28.1",
+    "pydantic-settings~=2.11.0",
+    "pydantic[email]~=2.12.3",
+    "pyyaml~=6.0.3",
+    "typer~=0.20.0",
+    "universal-pathlib~=0.3.4",
 ]
 
 [project.urls]
@@ -60,7 +60,9 @@ test = [
     "httpx>=0.25.0",
     "responses>=0.24.0",
     "pytest-mock>=3.12.0",
-    "fastapi>=0.104.0"
+    "fastapi>=0.104.0",
+    "pandas>=2.3.3",
+    "polars>=1.38.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -153,4 +155,3 @@ exclude_lines = [
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
 ]
-
